--- a/ForaCase/Base.lproj/Main.storyboard
+++ b/ForaCase/Base.lproj/Main.storyboard
@@ -65,19 +65,85 @@
                                         <rect key="frame" x="0.0" y="80" width="393" height="679"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wvf-7g-qGi">
-                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="itemSize" width="393" height="82"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gcY-9o-IgN">
-                                                <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="customCollectionViewCell" id="gcY-9o-IgN" customClass="CustomCollectionViewCell" customModule="ForaCase" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="80"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="b3s-qm-l0p">
-                                                    <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="80"/>
                                                     <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNY-qD-B8h">
+                                                            <rect key="frame" x="339.66666666666669" y="0.0" width="41.333333333333314" height="80"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EgQ-Du-S9o">
+                                                            <rect key="frame" x="280.33333333333331" y="0.0" width="41.333333333333314" height="80"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b1g-hD-qVe">
+                                                            <rect key="frame" x="8" y="0.0" width="40" height="80"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="40" id="S0G-kl-HRB"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="z7G-Lw-mgf">
+                                                            <rect key="frame" x="50" y="0.0" width="100" height="80"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ob-u0-Mlw">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="50"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="50" id="sUF-F6-OFP"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oEN-qL-OlT">
+                                                                    <rect key="frame" x="0.0" y="50" width="100" height="30"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="100" id="VSX-GN-L2X"/>
+                                                            </constraints>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" secondItem="b1g-hD-qVe" secondAttribute="bottom" id="4Ec-g3-isk"/>
+                                                        <constraint firstItem="z7G-Lw-mgf" firstAttribute="top" secondItem="b3s-qm-l0p" secondAttribute="top" id="7vU-uT-bIy"/>
+                                                        <constraint firstAttribute="bottom" secondItem="iNY-qD-B8h" secondAttribute="bottom" id="9dL-mI-LML"/>
+                                                        <constraint firstItem="EgQ-Du-S9o" firstAttribute="top" secondItem="b3s-qm-l0p" secondAttribute="top" id="H9u-5D-hk6"/>
+                                                        <constraint firstItem="b1g-hD-qVe" firstAttribute="leading" secondItem="b3s-qm-l0p" secondAttribute="leading" constant="8" id="NGv-nD-69h"/>
+                                                        <constraint firstItem="iNY-qD-B8h" firstAttribute="top" secondItem="b3s-qm-l0p" secondAttribute="top" id="Rg6-PQ-TFJ"/>
+                                                        <constraint firstItem="b1g-hD-qVe" firstAttribute="top" secondItem="b3s-qm-l0p" secondAttribute="top" id="aq0-ca-2Ly"/>
+                                                        <constraint firstAttribute="bottom" secondItem="z7G-Lw-mgf" secondAttribute="bottom" id="ced-wj-UtE"/>
+                                                        <constraint firstAttribute="trailing" secondItem="iNY-qD-B8h" secondAttribute="trailing" constant="12" id="jWX-4X-nKA"/>
+                                                        <constraint firstItem="z7G-Lw-mgf" firstAttribute="leading" secondItem="b1g-hD-qVe" secondAttribute="trailing" constant="2" id="l36-y4-gcv"/>
+                                                        <constraint firstAttribute="bottom" secondItem="EgQ-Du-S9o" secondAttribute="bottom" id="mRa-ox-1Af"/>
+                                                        <constraint firstItem="iNY-qD-B8h" firstAttribute="leading" secondItem="EgQ-Du-S9o" secondAttribute="trailing" constant="18" id="wlq-g1-usi"/>
+                                                    </constraints>
                                                 </collectionViewCellContentView>
+                                                <size key="customSize" width="393" height="80"/>
+                                                <connections>
+                                                    <outlet property="arrowImageView" destination="b1g-hD-qVe" id="Z7s-KR-UAe"/>
+                                                    <outlet property="differenceLabel" destination="iNY-qD-B8h" id="Nyp-Yq-JZn"/>
+                                                    <outlet property="lastChangedTimeLabel" destination="oEN-qL-OlT" id="ftL-tb-brt"/>
+                                                    <outlet property="lastPriceTable" destination="EgQ-Du-S9o" id="JHD-j9-cSd"/>
+                                                    <outlet property="nameLabel" destination="5ob-u0-Mlw" id="e8v-Te-bt8"/>
+                                                    <outlet property="stockNameLabel" destination="5ob-u0-Mlw" id="Agz-ux-KZP"/>
+                                                </connections>
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
@@ -99,6 +165,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="customCollectionView" destination="yTi-6P-OKu" id="G4W-be-fCs"/>
                         <outlet property="dropdownView" destination="1hD-sp-T2m" id="hLk-GH-g0k"/>
                         <outlet property="priceChangeDropdownButton" destination="ESx-zI-Miu" id="Rwi-Dd-ghT"/>
                         <outlet property="priceDifferenceDropdownButton" destination="8tB-9a-zJx" id="stq-Yo-tcz"/>
