--- a/ForaCase/Storyboard/Base.lproj/Main.storyboard
+++ b/ForaCase/Storyboard/Base.lproj/Main.storyboard
@@ -25,9 +25,9 @@
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="80"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8tB-9a-zJx">
-                                                <rect key="frame" x="324.33333333333331" y="0.0" width="56.666666666666686" height="80"/>
+                                                <rect key="frame" x="335.33333333333331" y="0.0" width="45.666666666666686" height="80"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="Fark"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="arrow.down" catalog="system" title=""/>
                                                 <connections>
                                                     <action selector="priceDifferenceButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zjF-WX-3jt"/>
                                                 </connections>
@@ -165,6 +165,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="arrow.down" catalog="system" width="118" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
